# chris_gr1_synthesis_demo

./: .gitignore  README.md
behavior_synthesis/: CMakeLists.txt  package.xml
chris_gr1_behavior_synthesis/: CHANGELOG.rst  CMakeLists.txt  package.xml
file_generation/: package.xml  setup.cfg  setup.py
file_generation/config/: Turtlebot.yaml  atlas_synthesis.yaml  flex_nav_synthesis.yaml  remapping.yaml  simple_synthesis.yaml  synthesis_formatting_example.yaml  wgcf.yaml
file_generation/file_generation/: file_generation_server.py
ltl_specification/: package.xml  setup.cfg  setup.py
ltl_specification/ltl_output_for_simple_example/: no_modes.txt  nonworking_example (MOI = prep_pay and select).txt  working_example(MOI = prep_pay and pay).txt
ltl_specification/ltl_specification/: atlas_specification.py  flex_nav_specification.py  ltl_compilation_server.py  simple_specification.py  system_wide_specification.py  turtlebot_specification.py
ltl_synthesizer/: README.md  install_slugs.sh  package.xml  setup.cfg  setup.py
ltl_synthesizer/ltl_synthesizer/: ltl_synthesis_server.py
ltl_synthesizer/ltl_synthesizer/StructuredSlugsParser/: Parser.py  compiler.py  integerVariableSubstitutor.py
respec/: package.xml  setup.py
respec/docs/: conf.py
respec/examples/: act_out_examples.py  atlas_specification.py  specs_testing.py
respec/respec/config/: system_wide_config.yaml
respec/respec/formula/: activation_outcomes.py  gr1_formulas.py
respec/respec/ltl/: ltl.py
respec/respec/spec/: additional_specs_loader.py  goal_specification.py  gr1_specification.py  ic_specification.py  robot_specification.py  ts_specification.py
respec/test/formula/: activation_outcomes_test.py  gr1_formulas_test.py
respec/test/spec/: goal_specification_test.py  gr1_specification_test.py  ic_specification_test.py  robot_specification_test.py  ts_specification_test.py
sm_generation/: package.xml  setup.cfg  setup.py
sm_generation/sm_generation/: concurrent_state_generator.py  sm_gen_config.py  sm_gen_error.py  sm_gen_util.py  sm_generation_server.py
sm_generation/sm_generation/configs/: flex_nav.yaml  simple.yaml  system_wide.yaml  systems.yaml  turtlebot.yaml
sm_generation/sm_generation/test/: test_sm_generation.py
synthesis_manager/: package.xml  setup.cfg  setup.py
synthesis_manager/launch/: behavior_synthesis.launch.py  file_generation.launch.py  ltl_compilation.launch.py  ltl_synthesizer.launch.py  sm_generation.launch.py  synthesis_server.launch.py
synthesis_manager/synthesis_manager/: behavior_synthesis_client.py  behavior_synthesis_server.py  ltl_compilation_client.py  ltl_synthesis_client.py  sm_generate_client.py
synthesis_msgs/: CMakeLists.txt  README.md  package.xml
synthesis_msgs/msg/: BehaviorSynthesisRequest.msg  SynthesisErrorCodes.msg
synthesis_msgs/srv/: GenerateLTLSpecification.srv
