<?xml version="1.0"?>
<?xml-model
    href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>file_generation</name>
    <version>0.0.0</version>
    <description>The file_generation package</description>
    <author email="johnwesley.hayhurst.12@cnu.edu">John Wesley Hayhurst</author>
    <maintainer email="robotics@cnu.edu">CNU Robotics</maintainer>
    <license>TODO</license>

    <depend>rclpy</depend>
    <depend>std_msgs</depend>
    <exec_depend>std_srvs</exec_depend>
    <exec_depend>respec</exec_depend>

    <export>
    <build_type>ament_python</build_type>
    </export>
</package>
