<?xml version="1.0"?>
<?xml-model
    href="http://download.ros.org/schema/package_format3.xsd"
    schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>ltl_specification</name>
    <version>1.0.0</version>
    <description>
        A service that compiles a complete LTL/GR(1) specification from various sources,
        including user input, initial conditions, system constraints, etc.
    </description>
    <author email="johnwesley.hayhurst.12@cnu.edu">John Wesley Hayhurst</author>
    <maintainer email="robotics@cnu.edu">CNU Robotics</maintainer>
    <license>BSD</license>

    <depend>rclpy</depend>
    <depend>std_msgs</depend>
    <depend>std_srvs</depend>
    <exec_depend>respec</exec_depend>
    <exec_depend>synthesis_msgs</exec_depend>

    <export>
        <build_type>ament_python</build_type>
    </export>
</package>
