<?xml version="1.0"?>
<?xml-model
    href="http://download.ros.org/schema/package_format3.xsd"
    schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>synthesis_manager</name>
    <version>1.0.0</version>
    <description>
        An action server that creates a state machine using the slugs synthesizer
    </description>
    <author email="johnwesley.hayhurst.12@cnu.edu">John Wesley Hayhurst</author>
    <maintainer email="robotics@cnu.edu">CNU Robotics</maintainer>
    <license>BSD</license>

    <exec_depend>rclpy</exec_depend>
    <exec_depend>std_srvs</exec_depend>
    <exec_depend>std_msgs</exec_depend>

    <export>
        <build_type>ament_python</build_type>
    </export>
</package>
